@@ -1,73 +1,69 @@
 package com.teamspring.MindCare.service;
 
 import com.teamspring.MindCare.model.Resource;
-import org.springframework.stereotype.Service;
-import java.util.Arrays;
+import com.teamspring.MindCare.repository.ResourceRepository;
+import java.util.ArrayList;
 import java.util.List;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
 
 @Service
 public class ResourceService {
     
+    @Autowired
+    private ResourceRepository resourceRepository;
+    
+    // Safe method - returns empty list if anything goes wrong
     public List<Resource> getAllResources() {
-        return Arrays.asList(
-            new Resource(
-                "Understanding Anxiety",
-                "Learn about the signs, symptoms, and coping mechanisms for anxiety disorders.",
-                "Mental Health",
-                "5 min",
-                "Dr. Sarah Johnson",
-                "2024-03-15"
-            ),
-            new Resource(
-                "Mindfulness Meditation Guide",
-                "A beginner's guide to practicing mindfulness meditation daily.",
-                "Self-Care",
-                "8 min",
-                "Michael Chen",
-                "2024-03-10"
-            ),
-            new Resource(
-                "Sleep Hygiene Tips",
-                "Improve your sleep quality with these evidence-based recommendations.",
-                "Wellness",
-                "6 min",
-                "Sleep Center Team",
-                "2024-03-05"
-            ),
-            new Resource(
-                "Stress Management Techniques",
-                "Effective strategies to manage stress in your daily life.",
-                "Mental Health",
-                "7 min",
-                "Dr. Robert Davis",
-                "2024-02-28"
-            ),
-            new Resource(
-                "Building Resilience",
-                "How to develop emotional resilience during challenging times.",
-                "Personal Growth",
-                "10 min",
-                "Emma Wilson",
-                "2024-02-20"
-            ),
-            new Resource(
-                "Digital Detox Benefits",
-                "Why and how to take regular breaks from digital devices.",
-                "Wellness",
-                "4 min",
-                "Tech Wellness Group",
-                "2024-02-15"
-            )
-        );
+        try {
+            return resourceRepository.findAll();
+        } catch (Exception e) {
+            System.err.println("Error fetching resources: " + e.getMessage());
+            return new ArrayList<>(); // Return empty list instead of crashing
+        }
     }
     
     public List<Resource> getResourcesByCategory(String category) {
-        return getAllResources().stream()
-                .filter(resource -> resource.getCategory().equalsIgnoreCase(category))
-                .toList();
+        try {
+            if (category == null || "All".equalsIgnoreCase(category)) {
+                return getAllResources();
+            }
+            return resourceRepository.findByCategory(category);
+        } catch (Exception e) {
+            System.err.println("Error fetching resources by category: " + e.getMessage());
+            return new ArrayList<>();
+        }
+    }
+    
+    public Resource getResourceById(Long id) {
+        try {
+            return resourceRepository.findById(id)
+                .orElseGet(() -> {
+                    // Return a dummy resource if not found (won't break page)
+                    Resource dummy = new Resource();
+                    dummy.setTitle("Resource Not Available");
+                    dummy.setDescription("This resource is currently unavailable.");
+                    dummy.setCategory("General");
+                    return dummy;
+                });
+        } catch (Exception e) {
+            System.err.println("Error fetching resource by ID: " + e.getMessage());
+            Resource dummy = new Resource();
+            dummy.setTitle("Error Loading Resource");
+            dummy.setDescription("Please try again later.");
+            return dummy;
+        }
     }
     
     public List<String> getAllCategories() {
-        return Arrays.asList("All", "Mental Health", "Self-Care", "Wellness", "Personal Growth");
+        try {
+            List<String> categories = resourceRepository.findAllDistinctCategories();
+            categories.add(0, "All");
+            return categories;
+        } catch (Exception e) {
+            System.err.println("Error fetching categories: " + e.getMessage());
+            return List.of("All", "Anxiety", "Stress", "Sleep"); // Default fallback
+        }
     }
+    
 }
